# archiveProcessingAgent

./: .env.example  .env.local.example  .env.production.example  .gitignore  AGENTS.md  DEVELOPMENT_CHECKLIST.md  PROGRESS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: azure-deploy.yml
docs/: README.md  a2a_protocol.md  api_reference.md  deployment_guide.md  developer_guide.md  examples.md  integration_guide.md  mcp_tool_usage.md  troubleshooting.md  user_manual.md
mock_data/: README.md
scripts/: README.md  build_setup_html.py  deploy_azure.sh  main.bicep  setup.html  setup.py
src/agent/: __init__.py  archive_agent.py  authentication.py  protocol.py  registry.py  request_interpreter.py  response_formatter.py  router.py
src/core/: __init__.py  archive_handler.py  content_summarizer.py  office_parser.py  powerbi_parser.py  relevance_engine.py  synapse_parser.py  tableau_parser.py
src/mcp/: __init__.py  manifest.json  mcp_tool.py  registry.py
src/utils/: azure_storage.py  config.py  local_storage.py  storage.py
tests/: __init__.py  conftest.py
tests/agent/: test_archive_agent.py  test_archive_agent_edge_cases.py  test_authentication.py  test_protocol.py  test_registry.py  test_request_interpreter.py  test_response_formatter.py  test_router.py
tests/core/: test_archive_handler.py  test_archive_handler_edge_cases.py  test_config.py  test_content_summarizer.py  test_office_parser.py  test_powerbi_parser.py  test_relevance_engine.py  test_synapse_parser.py  test_tableau_parser.py
tests/integration/: test_a2a_integration.py  (+9 more)
(+3 files in other folders)
